[gd_scene load_steps=44 format=2]

[ext_resource path="res://Assets/Enemies/Monsters_Creatures_Fantasy/Skeleton/Death.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Monsters_Creatures_Fantasy/Skeleton/Idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" type="Texture" id=3]
[ext_resource path="res://src/Scenes/Info/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scenes/Enemies/Skeleton.gd" type="Script" id=5]
[ext_resource path="res://src/Scenes/Enemies/RoamingAI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Enemies/Monsters_Creatures_Fantasy/Skeleton/Walk.png" type="Texture" id=7]
[ext_resource path="res://src/Scenes/Info/Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Scenes/Enemies/PlayerDectection.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Scenes/Info/Hitbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Enemies/Monsters_Creatures_Fantasy/Skeleton/Attack.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sounds/Monster-2.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.74747, 25.1977 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "takehit_finished"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Take Hit"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachine" id=27]
states/Attack/node = SubResource( 7 )
states/Attack/position = Vector2( 717.143, 83.5 )
states/Death/node = SubResource( 8 )
states/Death/position = Vector2( 617, 174 )
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 394, 231.5 )
"states/Take Hit/node" = SubResource( 10 )
"states/Take Hit/position" = Vector2( 545, 49.5 )
states/Walk/node = SubResource( 11 )
states/Walk/position = Vector2( 339.643, 98 )
transitions = [ "Idle", "Death", SubResource( 12 ), "Idle", "Take Hit", SubResource( 13 ), "Take Hit", "Idle", SubResource( 14 ), "Take Hit", "Death", SubResource( 15 ), "Idle", "Walk", SubResource( 16 ), "Walk", "Take Hit", SubResource( 17 ), "Take Hit", "Walk", SubResource( 18 ), "Walk", "Death", SubResource( 19 ), "Idle", "Attack", SubResource( 20 ), "Attack", "Idle", SubResource( 21 ), "Attack", "Death", SubResource( 22 ), "Take Hit", "Attack", SubResource( 23 ), "Attack", "Take Hit", SubResource( 24 ), "Walk", "Attack", SubResource( 25 ), "Attack", "Walk", SubResource( 26 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( 231.643, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=28]

[sub_resource type="CapsuleShape2D" id=29]
radius = 20.5034
height = 294.711

[sub_resource type="CapsuleShape2D" id=30]
radius = 19.0

[sub_resource type="CircleShape2D" id=31]
radius = 25.7419

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 5 )
MAX_SPEED = 80

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.49004, 0.961378 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
"anims/Take Hit" = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 27 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 28 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
MAX_HEALTH = 20

[node name="RoamingAI" parent="." instance=ExtResource( 6 )]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 15, 0 )
enabled = true
collision_mask = 8

[node name="PlayerDectection" parent="." instance=ExtResource( 9 )]
collision_mask = 1

[node name="CollisionShape2D" parent="PlayerDectection" index="0"]
visible = false
position = Vector2( 9.68211, -2.1492 )
rotation = 1.5708
shape = SubResource( 29 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 1.33915, -0.78958 )
shape = SubResource( 30 )

[node name="Hitbox" parent="." instance=ExtResource( 10 )]
collision_layer = 0
collision_mask = 16
MAX_DAMAGE = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2( 49.7216, -4.74728 )
shape = SubResource( 31 )
disabled = true

[node name="TakeHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDectection"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
